:recycle: removed filemetadata